--- a/style.css
+++ b/style.css
@@ -1,2 +1,34 @@
+* {
+margin:0;
+padding:0;
+}
 
+.container {
+width:500px;
+margin:auto;
+position:relative;
+}
+
+.container h1 {
+text-align:center;
+}
+
+.container .items {
+width:50%;
+margin:auto;
+
+}
+
+.todos {
+width:50%;
+margin:25px auto;
+}
+
+.todos p {
+line-height:2em;
+}
+
+.garis {
+text-decoration:line-through;
+}
 
